[gd_scene load_steps=5 format=2]

[ext_resource path="res://juego/interface/ContenedorVidas.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/interface/ContenedorMonedasOro.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/interface/HUD.gd" type="Script" id=6]
[ext_resource path="res://juego/interface/ContenedorNivel.tscn" type="PackedScene" id=7]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 10.0241, 152.127 ]
}

[node name="ContenedorVidas" parent="." instance=ExtResource( 1 )]
margin_left = 8.0
margin_top = 13.0
margin_right = 128.0
margin_bottom = 78.0

[node name="ContenedorMonedasOro" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -113.0
margin_top = 10.0
margin_right = -8.0
margin_bottom = 50.0

[node name="ContenedorNivel" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_right = 96.0
